ie11 layout issue on about resolved

--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ ul.sidebar-nav li a:hover {
     background-color: #595959;
 }
 
-.home-lower-container {
+.lower-container {
     height: 500px;
     border-style: solid;
     border-width: 15px;
@@ -277,17 +277,30 @@ ul.sidebar-nav li a:hover {
     background-color: #f19664;
 }
 
-.home-lower-container:before {
+.lower-container::before,
+.lower-container::after {
     content: "";
     position: absolute;
-    top: -18px;
-    left: 50%;
-    transform: translate(-50%);
+    right: 50%;
+    top: -15px;
+    transform: translate(50%);
+    width: 0;
+    height: 0;
+    z-index: 2;
     width: 0; 
     height: 0; 
+
+}
+.lower-container::before{
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 50px solid white;   
+}
+
+.lower-container::after{
     border-left: 40px solid transparent;
     border-right: 40px solid transparent;
-    border-top: 40px solid #595959;
+    border-top: 40px solid #595959;  
 }
 
 .home-lower-img img{
@@ -304,19 +317,19 @@ ul.sidebar-nav li a:hover {
     padding-bottom: 1rem;
 }
 
-.about-row> :nth-child(2),
-.about-row> :last-child{
+.about-row>:nth-child(2),
+.about-row>:last-child{
     background-color:#fa9a55;
     border: 10px solid #ed6c1d;
     padding-top: 50px;
 }
-.about-row> :nth-child(3){
+.about-row>:nth-child(3){
     padding-top: 50px;
 }
 
 /* div triangles */
-.about-row> :not(:last-child)::before,
-.about-row> :not(:last-child)::after{
+.about-row>:not(:last-child)::before,
+.about-row>:not(:last-child)::after{
     content: "";
     position: absolute;
     right: 50%;
@@ -327,26 +340,26 @@ ul.sidebar-nav li a:hover {
 }
 
 /* all children of about-row */
-.about-row >*::before {
+.about-row>*::before {
     bottom: -49px;
     border-left: 50px solid transparent;
     border-right: 50px solid transparent;
     border-top: 50px solid white;
     border-bottom:0px;
 }
-.about-row >*::after {
+.about-row>*::after {
     bottom: -38px;
     border-left: 40px solid transparent;
     border-right: 40px solid transparent;   
 }
 
-.about-row> :first-child::after,
-.about-row> :nth-child(3)::after {
+.about-row>:first-child::after,
+.about-row>:nth-child(3)::after {
     border-top: 40px solid #595959;
     border-bottom:0px;
 }
 
-.about-row> :nth-child(2)::after{
+.about-row>:nth-child(2)::after{
     border-top: 40px solid #fa9a55;
     border-bottom:0px;
 }
@@ -366,6 +379,17 @@ ul.sidebar-nav li a:hover {
     transform: translateY(0);
     padding: 0;
     margin: 0;
+}
+
+/* SERVICE PAGE */
+
+.service-main-div {
+    margin-top: 120px;
+}
+
+.service-main-img {
+    width: 100%;
+    height: 200px;
 }
 
 
@@ -538,7 +562,7 @@ ul.sidebar-nav li a:hover {
     }
 
     /* about-div triangles */
-    .about-row> :first-child::before {
+    .about-row>:first-child::before {
         border-top: 50px solid transparent;
         border-left: 50px solid white;
         border-bottom: 50px solid transparent;
@@ -546,7 +570,7 @@ ul.sidebar-nav li a:hover {
         right: -100px;
         transform: translateY(-50%);
     }
-    .about-row> :first-child::after {
+    .about-row>:first-child::after {
         border-top: 40px solid transparent;
         border-left: 40px solid #595959;
         border-bottom: 40px solid transparent;
@@ -554,7 +578,7 @@ ul.sidebar-nav li a:hover {
         right: -79px;
         transform: translateY(-50%);
     }
-    .about-row> :nth-child(3)::before {
+    .about-row>:nth-child(3)::before {
         border-top: 50px solid transparent;
         border-right: 50px solid white;
         border-bottom: 50px solid transparent;
@@ -562,7 +586,7 @@ ul.sidebar-nav li a:hover {
         left: -100px;
         transform: translateY(-50%);
     }
-    .about-row> :nth-child(3)::after {
+    .about-row>:nth-child(3)::after {
         border-top: 40px solid transparent;
         border-right: 40px solid #595959;
         border-bottom: 40px solid transparent;
@@ -572,7 +596,7 @@ ul.sidebar-nav li a:hover {
     }
     .about-text {
         position: absolute;
-        width: auto;
+        width: 100%;
         top: 50%;
         transform: translateY(-50%);
     }
